--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,13 +9,12 @@ android {
         targetSdkVersion 27
         versionCode 1
         versionName "1.0"
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
 
     //java8 配置
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_7
-        targetCompatibility JavaVersion.VERSION_1_7
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
     }
 
     buildTypes {
@@ -33,11 +32,7 @@ android {
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
-        exclude group: 'com.android.support', module: 'support-annotations'
-    })
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    testCompile 'junit:junit:4.12'
     compile 'com.android.support:design:27.0.2'
     compile 'com.android.support:recyclerview-v7:27.0.2'
     compile 'com.google.android:flexbox:0.2.6'
@@ -45,5 +40,6 @@ dependencies {
     compile 'com.github.bumptech.glide:glide:3.8.0'
     compile 'com.android.support:support-v4:27.0.2'
     compile 'com.android.support:cardview-v7:27.0.2'
-    compile project(':library')
+    compile 'com.dingcb:dragswipeback:1.0.1'
+//    compile project(':library')
 }
