--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,12 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
-
 buildscript {
     repositories {
         jcenter()
         google()
+        maven { url "https://dl.bintray.com/dingcb/maven" }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.0.1'
-        classpath 'com.github.dcendents:android-maven-gradle-plugin:1.5'
-        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.7.3'
+        classpath 'com.novoda:bintray-release:0.8.0'
     }
 }
 
@@ -17,14 +15,16 @@ allprojects {
         jcenter()
         google()
         maven { url "https://jitpack.io" } //BaseRecyclerViewAdapterHelper配置
+        maven { url "https://dl.bintray.com/dingcb/maven" }
     }
+
+    tasks.withType(Javadoc) {
+        options.addStringOption('Xdoclint:none', '-quiet')
+        options.addStringOption('encoding', 'UTF-8')
+    }
+
 }
 
-//tasks.withType(Javadoc) {
-//    options.addStringOption('Xdoclint:none', '-quiet')
-//    options.addStringOption('charSet', 'UTF-8')
-//    options.addStringOption('encoding', 'UTF-8')
-//}
 
 task clean(type: Delete) {
     delete rootProject.buildDir
